# parallel-matrix-vector-multiplication

./: .gitignore  CMakeLists.txt  MatrixMultiplier.cpp  MatrixMultiplier.h  README.md  run.sh
include/DataHandler/: DataReader.h  DataWriter.h  RandomDataWriter.h  ResultDataWriter.h  ResultTextDataWriter.h  ResultXmlDataWriter.h  TextDataReader.h  TextDataWriter.h  XmlDataReader.h
include/Mpi/: MultipleColumnMultiplier.h  MultipleRowMultiplier.h  MultipleRowMultiplierSecond.h  SingleColumnMultiplier.h  SingleColumnMultiplierSecond.h  SingleRowMultiplier.h  SingleRowMultiplierSecond.h
include/Performance/: Benchmarker.h  ResultWriter.h
include/Pvm/: MultipleColumnMultiplier.h  MultipleRowMultiplier.h  SingleColumnMultiplier.h  SingleColumnMultiplierSecond.h  SingleRowMultiplier.h  SingleRowMultiplierSecond.h
include/RandomGenerator/: ExponentialRandomGenerator.h  NormalRandomGenerator.h  RandomGenerator.h  RubbishRandomGenerator.h  UniformRandomGenerator.h
include/Serial/: MatrixMultiplier.h  SerialMatrixMultiplier.h
include/Ui/: dialog.h  exponentialdialog.h  insertdialog.h  mainwindow.h  normaldialog.h  offsetdialog.h  uniformdialog.h
pvm/: MultipleRowMultiplier.cpp  MultipleRowMultiplier.h  SingleColumnMultiplier.cpp  SingleColumnMultiplier.h  SingleRowMultiplier.cpp  SingleRowMultiplier.h  data.txt  multiple_rows.cpp  single_column.cpp  single_row.cpp
serial/: SerialMatrixMultiplier.cpp  SerialMatrixMultiplier.h
source/: dialog.cpp  dialog.ui  exponentialdialog.cpp  exponentialdialog.ui  insertdialog.cpp  insertdialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  normaldialog.cpp  normaldialog.ui  offsetdialog.cpp  offsetdialog.ui  uniformdialog.cpp  uniformdialog.ui
source/DataHandler/: DataReader.cpp  DataWriter.cpp  RandomDataWriter.cpp  ResultDataWriter.cpp  ResultTextDataWriter.cpp  ResultXmlDataWriter.cpp  TextDataReader.cpp  TextDataWriter.cpp  XmlDataReader.cpp
source/Mpi/: MultipleColumnMultiplier.cpp  MultipleRowMultiplier.cpp  MultipleRowMultiplierSecond.cpp  SingleColumnMultiplier.cpp  SingleColumnMultiplierSecond.cpp  SingleRowMultiplier.cpp  SingleRowMultiplierSecond.cpp
source/Mpi/private/: mpi_multiple_columns.cpp  mpi_multiple_rows.cpp  mpi_multiple_rows_second.cpp  mpi_single_column.cpp  mpi_single_column_second.cpp  mpi_single_row.cpp  mpi_single_row_second.cpp
source/Performance/: Benchmarker.cpp  ResultWriter.cpp
source/Pvm/: MultipleColumnMultiplier.cpp  MultipleRowMultiplier.cpp  SingleColumnMultiplier.cpp  SingleColumnMultiplierSecond.cpp  SingleRowMultiplier.cpp  SingleRowMultiplierSecond.cpp  single_row.cpp
source/Pvm/private/: multiple_columns.cpp  multiple_rows.cpp  pvm_multiple_columns.cpp  pvm_multiple_rows.cpp  pvm_single_column.cpp  pvm_single_column_second.cpp  pvm_single_row.cpp  pvm_single_row_second.cpp  single_column.cpp  single_row.cpp
source/RandomGenerator/: ExponentialRandomGenerator.cpp  NormalRandomGenerator.cpp  RandomGenerator.cpp  RubbishRandomGenerator.cpp  UniformRandomGenerator.cpp
source/Serial/: MatrixMultiplier.cpp  SerialMatrixMultiplier.cpp
util/: DataReader.cpp  DataReader.h  DataWriter.cpp  NormalRandomGenerator.cpp  RandomGenerator.cpp  TextDataReader.cpp  TextDataReader.h  TextDataWriter.cpp  UniformRandomGenerator.cpp
