cmake_minimum_required(VERSION 3.6)
#set(CMAKE_CXX_COMPILER "/home/ojabassini/openmpi/bin/mpic++")
#set(CXX "/home/ojabassini/openmpi/bin/mpic++")
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpic++)
project(Project)
set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES source/main.cpp source/RandomGenerator/RandomGenerator.cpp source/RandomGenerator/NormalRandomGenerator.cpp source/RandomGenerator/UniformRandomGenerator.cpp source/DataHandler/DataReader.cpp source/DataHandler/DataWriter.cpp source/DataHandler/TextDataReader.cpp source/DataHandler/TextDataWriter.cpp source/Serial/MatrixMultiplier.cpp source/Pvm/SingleRowMultiplier.cpp source/Serial/SerialMatrixMultiplier.cpp source/Pvm/SingleColumnMultiplier.cpp source/Pvm/MultipleRowMultiplier.cpp source/DataHandler/RandomDataWriter.cpp source/Performance/Benchmarker.cpp source/Pvm/MultipleColumnMultiplier.cpp source/Mpi/SingleRowMultiplier.cpp source/Mpi/SingleColumnMultiplier.cpp source/Mpi/MultipleRowMultiplier.cpp source/Mpi/MultipleColumnMultiplier.cpp source/Performance/ResultWriter.cpp)
add_executable(Project ${SOURCE_FILES})
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
include_directories("${PROJECT_SOURCE_DIR}/include")
include_directories("/home/ojabassini/openmpi/include")
target_link_libraries(Project libpvm3.a)
target_link_libraries(Project libgpvm3.a)
file(GLOB APP_SOURCES source/Pvm/private/*.cpp source/Mpi/private/*.cpp)
foreach (testsourcefile ${APP_SOURCES})
    get_filename_component(testname ${testsourcefile} NAME_WE)
    add_executable(${testname} ${testsourcefile} source/DataHandler/DataReader.cpp source/DataHandler/DataWriter.cpp source/DataHandler/TextDataWriter.cpp source/DataHandler/TextDataReader.cpp)
    include_directories("${PROJECT_SOURCE_DIR}/include")
    target_link_libraries(${testname} libpvm3.a)
    target_link_libraries(${testname} libgpvm3.a)
endforeach (testsourcefile ${APP_SOURCES})